Explicitly set checkbox state should not be influenced by defaultState

BUG=608416

Review-Url: https://codereview.chromium.org/1956453004
Cr-Commit-Position: refs/heads/master@{#392030}

Former-commit-id: bf3ed6ce3fcda2745f9871a57d685c4cb7a1ea7c